@@ -94,8 +94,11 @@ sub _mirror {
         if ($dump eq '+') {        # add
                 my $target = "$dir/$path";
                 if ($type eq '-') {        # REG
-                        if (exist($target) == 1) {      # We only have a suffix if the file exists
-                                unlink $target or warn "** Cannot unlink: $target: $!";
+                        if (exist($target) == 1) {
+                                if (-d _)
+                                        rmtree $target or warn "** Cannot remove: $target: $!";
+                                else 
+                                        unlink $target or warn "** Cannot unlink: $target: $!";
                         }
                         if ($remote) {
                                 open FILE, ">$target" or warn "** Cannot create: $target: $!";
@@ -139,7 +142,10 @@ sub _mirror {
                         $idir++;
                 } elsif ($type eq 'l') {        # LNK; target id the content
                         if (exist($target) == 1) {
-                                unlink $target or warn "** Cannot unlink: $target: $!";
+                                if (-d _)
+                                        rmtree $target or warn "** Cannot remove: $target: $!";
+                                else
+                                        unlink $target or warn "** Cannot unlink: $target: $!";
                         }
                         if ($remote) {
                                 my $linkTarget = "";
@@ -156,11 +162,10 @@ sub _mirror {
         } else {        # Remove
                 my $target = "$dir/$path";
                 if (exist($target)) {
-                        if (-d _) {
+                        if (-d _)
                                 rmtree $target or warn "** Cannot remove: $target: $!";
-                        } else {
-                                unlink $target or warn "** Cannot remove: $target: $!";
-                        }
+                        else
+                                unlink $target or warn "** Cannot unlink: $target: $!";
                 }
                 $irm++;
         }
