@@ -2,6 +2,8 @@ xx yyy 2007: 0.3.7 Miek <miek@miek.nl>
   -- bugfixes --
    * removed @datarootdir@ as this gives errors with older
      autoconf versions
+   * rdup-snap: when removing, look at the type, and if its
+     a dir use rmtree, otherwise unlink
 
 26 Jan 2007: 0.3.6 Miek <miek@miek.nl>
   -- minor bugfixes --
